Sep 21 2005  devel  Split GPS into gpscore and gpsdclient in anticipation of
                     adding additional GPS capture methods
Sep 20 2005  devel  Implemented INFO protocol, added additional fields,
                     deprecated 'signal' field
                    Fixed maxsignal initialization in SNR fields
Sep 19 2005  devel  Fixed config file cmdline option
                    Finished redoing CARD protocol
                    Fixed stupid error in gpsxml logging
Sep 18 2005  devel  Moved CARD protocol into packetsourcetracker
                    Fixed "client ring buffer full" message going into the
                     client ring buffer
                    Fixed loop in clinetframe kill procedure, fixed hammering
                     "Socket closed" error messages
                    Fixed gpsd reconnect if nothing to connect to
Sep 17 2005  devel  Added tracking of multiple SSIDs per network, and tracking
                     all networks a client has probed for.  No methods to export
                     this information yet.
                    Added removal abilities for client commands and network
                     protocols in netframe
                    Added auxptr to network protocols for enable functions to
                     hook a class
                    Added plugin listing protocol
                    Added plugin shutdown
                    Put plugintracker in globalreg
Sep 15 2005  devel  Added user plugin directory scanning and loading
                    Implemented actually kickstarting the plugins
                    Made better errors for dlopen() being stupid
                    Fixed plugin symbol exporting
                    Wrote demo NULL plugin (crappy example, better to come)
                    Plugins should now be functional.  YOU WILL NEED TO RERUN
                     CONFIGURE for plugins to enable properly, you will also
                     need to turn on 'allowplugins=true' in your config file.